# QC-Education-Package

./: .gitignore  LICENSE  README.md  build.sh  klausurtermine.md  pyproject.toml  requirements.txt  test.py  todo.md
qc-simulator/: simulator.py  test.py
qc_simulator/: pyplot3d_helper.py  simulator.py  test.py  test_dcn.py  test_lars.py  versions.py  visualization.py
src/qc-education-package/: simulator.py  visualization.py
src/qc_education_package/: __init__.py  simulator.py  visualization.py
