[project]
name = "qc_education_package"
keywords = ["quantum computing", "circle notation", "education"]
dependencies = [
  "matplotlib >= 3.7.0",
  "numpy >= 1.22.4",
]
version = "0.0.3"
authors = [
  { name="Nikolas Longen", email="nlongen@rptu.de" },
  { name="Maximilian Kiefer-Emmanouilidis", email="maximilian.kiefer@rptu.de" }
]
description = "Quantuk QC-Education-Package"
readme = "README.md"
requires-python = ">=3.9.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
"Homepage" =  "https://www.physik.uni-kl.de/widera/forschung/quantuk"
"Repository" = "https://github.com/QuanTUK/QC-Education-Package"
"Bug Tracker" = "https://github.com/QuanTUK/QC-Education-Package/issues"
